--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
             <button type="submit">Send</button>
         </form>
     </section>
+    <link rel="stylesheet" href="styles.css">
 
     <script src="script.js"></script>
 </body>
