--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing Page</title>
     <link rel="stylesheet" href="styles.css">
+  
 </head>
 <body>
     <header class="hero">
-        <h1>Discover Our App</h1>
-        <p>The best app for all your needs.</p>
+        <h1 class="headline">Discover Our App</h1>
+        <p class="subheadline">The best app for all your needs.</p>
         <div class="cta-buttons">
             <a href="/download" class="cta-button">Download Now</a>
             <a href="#features" class="cta-button">Learn More</a>
@@ -20,12 +21,12 @@
         <h2>Features</h2>
         <div class="features-list">
             <div class="feature">
-                <img src="https://via.placeholder.com/100" alt="Feature One">
+                <img src="assets/img/category1-img.png" alt="Feature One">
                 <h3>Feature One</h3>
                 <p>Description of feature one.</p>
             </div>
             <div class="feature">
-                <img src="https://via.placeholder.com/100" alt="Feature Two">
+                <img src="assets/img/category2-img.png" alt="Feature Two">
                 <h3>Feature Two</h3>
                 <p>Description of feature two.</p>
             </div>
@@ -35,8 +36,8 @@
     <section class="screenshots">
         <h2>Screenshots</h2>
         <div class="screenshots-gallery">
-            <img src="https://via.placeholder.com/300" alt="Screenshot 1">
-            <img src="https://via.placeholder.com/300" alt="Screenshot 2">
+            <img src="assets/img/home1-img.png" alt="Screenshot 1">
+            <img src="assets/img/home3-img.png" alt="Screenshot 2">
         </div>
     </section>
 
@@ -44,14 +45,14 @@
         <h2>Testimonials</h2>
         <div class="testimonials-list">
             <div class="testimonial">
-                <img src="https://via.placeholder.com/50" alt="User One">
-                <p>"This app is fantastic! It has changed my life."</p>
-                <h4>User One</h4>
+                <img src="assets/img/new1-img.png" alt="User One">
+                <p class="feedback">"This app is fantastic! It has changed my life."</p>
+                <h4 class="name">User One</h4>
             </div>
             <div class="testimonial">
-                <img src="https://via.placeholder.com/50" alt="User Two">
-                <p>"I can't imagine my daily routine without this app."</p>
-                <h4>User Two</h4>
+                <img src="assets/img/new4-img.png" alt="User Two">
+                <p class="feedback">"I can't imagine my daily routine without this app."</p>
+                <h4 class="name">User Two</h4>
             </div>
         </div>
     </section>
@@ -61,8 +62,8 @@
         <div class="pricing-plans">
             <div class="pricing-plan">
                 <h3>Basic</h3>
-                <p>$9.99/month</p>
-                <ul>
+                <p class="price">$9.99/month</p>
+                <ul class="features-list">
                     <li>Feature A</li>
                     <li>Feature B</li>
                     <li>Feature C</li>
@@ -70,12 +71,12 @@
             </div>
             <div class="pricing-plan">
                 <h3>Premium</h3>
-                <p>$19.99/month</p>
-                <ul>
+                <p class="price">$19.99/month</p>
+                <ul class="features-list">
                     <li>Feature A</li>
-                    <li>Feature B</li>
-                    <li>Feature C</li>
-                    <li>Feature D</li>
+                     <li>Feature B</li>
+                     <li>Feature C</li>
+                     <li>Feature D</li>
                 </ul>
             </div>
         </div>
@@ -90,8 +91,7 @@
             <button type="submit">Send</button>
         </form>
     </section>
-    <link rel="stylesheet" href="styles.css">
 
-    <script src="script.js"></script>
+    <script src="app.js"></script>
 </body>
 </html>
